--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -52,9 +52,12 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
          channel: "stable"
+      - name: flutter Upgrade
+        run: |
+          flutter upgrade --force
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter build appbundle
+      - run: flutter build appbundle --release
       
       
          
