--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -79,6 +79,9 @@ jobs:
         uses: subosito/flutter-action@v1
         with:
           flutter-version: 2.0.6
+      - name: flutter Upgrade
+        run: |
+          flutter upgrade --force
       - run: flutter pub get
       - run: flutter build apk --release
       - name: Upload artifact to Github
