--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -92,7 +92,7 @@ jobs:
       - name: Run Fastlane
         uses: maierj/fastlane-action@v1.4.0
         with:
-          lane: closed_beta
+          lane: deploy
           subdirectory: android
          
       
