--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -58,6 +58,25 @@ jobs:
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build appbundle --release
+
+  build_web:
+    name: Build Flutter (Web)
+    needs: [flutter_test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'master'
+      #- run: flutter pub get
+      - run: flutter config --enable-web
+      #- run: flutter build web --base-href "/${{ github.event.repository.name }}/"
+      - run: flutter build web
+      - run: git config user.name github-actions
+      - run: git config user.email github-actions@github.com
+      - run: git --work-tree build/web add --all
+      - run: git commit -m "Automatic deployment by github-actions"
+      - run: git push origin HEAD:gh_pages --force
       #CD
   deploy_android:
     name: Deploying to playstore
