--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -76,7 +76,7 @@ jobs:
       - run: git config user.email github-actions@github.com
       - run: git --work-tree build/web add --all
       - run: git commit -m "Automatic deployment by github-actions"
-      - run: git push origin HEAD:gh_pages --force
+      - run: git push origin HEAD:main --force
       #CD
   deploy_android:
     name: Deploying to playstore
