--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -70,13 +70,12 @@ jobs:
           channel: 'master'
       #- run: flutter pub get
       - run: flutter config --enable-web
-      #- run: flutter build web --base-href "/${{ github.event.repository.name }}/"
-      - run: flutter build web
+      - run: flutter build web --base-href "/$cadvizor/"
       - run: git config user.name github-actions
       - run: git config user.email github-actions@github.com
       - run: git --work-tree build/web add --all
       - run: git commit -m "Automatic deployment by github-actions"
-      - run: git push origin HEAD:gh_pages --force
+      - run: git push origin HEAD:gh_pages2 --force
       #CD
   deploy_android:
     name: Deploying to playstore
