--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -60,7 +60,7 @@ jobs:
       - run: flutter build appbundle --release
 
   build_web:
-    name: Build Flutter (Web)
+    name: Build Flutter (Web) and Deploy
     needs: [flutter_test]
     runs-on: ubuntu-latest
     steps:
@@ -77,39 +77,40 @@ jobs:
       - run: git commit -m "Automatic deployment by github-actions"
       - run: git push origin HEAD:gh_pages2 --force
       #CD
-  deploy_android:
-    name: Deploying to playstore
-    runs-on: ubuntu-latest
-    needs: [build_appbundle]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup Java
-        uses: actions/setup-java@v1
-        with:
-          java-version: 12.x
-      #- name: Decrypt Android keys
-      #  run: sh ./.github/scripts/decrypt_secret.sh
-      #  env:
-      #    ANDROID_KEYS_ZIP_PASSPHRASE: ${{ secrets.ANDROID_KEYS_ZIP_PASSPHRASE }}
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v1
-        with:
-          flutter-version: 2.0.6
-      - name: flutter Upgrade
-        run: |
-          flutter upgrade --force
-      - run: flutter pub get
-      - run: flutter build apk --release
-      - name: Upload artifact to Github
-        uses: actions/upload-artifact@v1
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
-      - name: Run Fastlane
-        uses: maierj/fastlane-action@v1.4.0
-        with:
-          lane: closed_beta
-          subdirectory: android
+
+#deploy_android:
+#  name: Deploying to playstore
+#  runs-on: ubuntu-latest
+#  needs: [build_appbundle]
+#  steps:
+#    - name: Checkout code
+#      uses: actions/checkout@v2
+#    - name: Setup Java
+#      uses: actions/setup-java@v1
+#      with:
+#        java-version: 12.x
+#    #- name: Decrypt Android keys
+#    #  run: sh ./.github/scripts/decrypt_secret.sh
+#    #  env:
+#    #    ANDROID_KEYS_ZIP_PASSPHRASE: ${{ secrets.ANDROID_KEYS_ZIP_PASSPHRASE }}
+#    - name: Setup Flutter
+#      uses: subosito/flutter-action@v1
+#      with:
+#        flutter-version: 2.0.6
+#    - name: flutter Upgrade
+#      run: |
+#        flutter upgrade --force
+#    - run: flutter pub get
+#    - run: flutter build apk --release
+#    - name: Upload artifact to Github
+#      uses: actions/upload-artifact@v1
+#      with:
+#        name: release-apk
+#        path: build/app/outputs/apk/release/app-release.apk
+#    - name: Run Fastlane
+#      uses: maierj/fastlane-action@v1.4.0
+#      with:
+#        lane: closed_beta
+#        subdirectory: android
          
-      
+
