--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -23,41 +23,41 @@ jobs:
       #- run: flutter analyze
       #- run: flutter test
       
-  build_ios:
-    name: Build Flutter (iOS)
-    needs: [flutter_test]
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v1
-        with:
-          java-version: "12.x"
-      - uses: subosito/flutter-action@v2
-        with:
-         channel: "stable"
-      - run: flutter pub get
-      - run: flutter clean
-      - run: flutter build ios --release --no-codesign
+# build_ios:
+#   name: Build Flutter (iOS)
+#   needs: [flutter_test]
+#   runs-on: macos-latest
+#   steps:
+#     - uses: actions/checkout@v3
+#     - uses: actions/setup-java@v1
+#       with:
+#         java-version: "12.x"
+#     - uses: subosito/flutter-action@v2
+#       with:
+#        channel: "stable"
+#     - run: flutter pub get
+#     - run: flutter clean
+#     - run: flutter build ios --release --no-codesign
 
-      
-  build_appbundle:
-    name: Build Flutter (Android)
-    needs: [flutter_test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: "12.x"
-      - uses: subosito/flutter-action@v1
-        with:
-         channel: "stable"
-      - name: flutter Upgrade
-        run: |
-          flutter upgrade --force
-      - run: flutter pub get
-      - run: flutter clean
-      - run: flutter build appbundle --release
+#
+# build_appbundle:
+#   name: Build Flutter (Android)
+#   needs: [flutter_test]
+#   runs-on: ubuntu-latest
+#   steps:
+#     - uses: actions/checkout@v2
+#     - uses: actions/setup-java@v1
+#       with:
+#         java-version: "12.x"
+#     - uses: subosito/flutter-action@v1
+#       with:
+#        channel: "stable"
+#     - name: flutter Upgrade
+#       run: |
+#         flutter upgrade --force
+#     - run: flutter pub get
+#     - run: flutter clean
+#     - run: flutter build appbundle --release
 
   build_web:
     name: Build Flutter (Web) and Deploy
@@ -70,7 +70,7 @@ jobs:
           channel: 'master'
       #- run: flutter pub get
       - run: flutter config --enable-web
-      - run: flutter build web --base-href "/$cadvizor/"
+      - run: flutter build web --base-href "/${{ github.event.repository.name }}/"
       - run: git config user.name github-actions
       - run: git config user.email github-actions@github.com
       - run: git --work-tree build/web add --all
